--- a/monitoreo/templates/simas/salud.html
+++ b/monitoreo/templates/simas/salud.html
@@ -4,33 +4,23 @@
 {% block contenido %}
 
 <div id="contenedor_igual">
-                            <a href="/educacion" class="educacion">Educación</a>
-                            <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
-                            <a href="/salud" class="educacion">Salud</a>
-                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
-                            <a href="/luz"class="agua">Energia</a>
-                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
-                            <a href="/agua"class="luz">Agua de consumo</a>
-                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
-                        </div>
-                        <div class="separador"></div>
-                        <br></br>
-
-<div id="sidebar">
-    <div class="graficos_widget">
-        <h1>Gráficos de Disponibilidad </h1>
-        <a id="grafico1" href="#" onCLick="disp(1)">Disponibilidad en Quebrada</a>
-        <a id="grafico2" href="#" onCLick="disp(2)">Disponibilidad en Ojo de Agua</a>
-        <a id="grafico3" href="#" onCLick="disp(3)">Disponibilidad en Pozo Comunitario</a>
-        <a id="grafico4" href="#" onCLick="disp(4)">Disponibilidad en Pozo Propio</a>
-        <a id="grafico5" href="#" onCLick="disp(5)">Disponibilidad en Agua comunitaria</a>
-        <a id="grafico6" href="#" onCLick="disp(6)">Disponibilidad en Agua de la casa</a>
+  <a href="/educacion" class="educacion">Educación</a>
+  <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
+  <a href="/salud" class="educacion">Salud</a>
+  <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
+  <a href="/luz"class="agua">Energia</a>
+  <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
+  <a href="/agua"class="luz">Agua de consumo</a>
+  <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
 </div>
-
+<div class="separador"></div>
 <br></br>
+
+
    
 <div class="contenido">
-    <table id="table_example" class="tablesorter" style="font-size:90%">
+    <table>
+    <caption>Tiene Buena Salud?</caption>
         <thead>
             <tr>
                 <th></th>
@@ -51,7 +41,8 @@
         <tbody>
     </table>
 <br></br>
-    <table id="table_example1" class="tablesorter" style="font-size:90%">
+    <table>
+    <caption>Visita centros de salud</caption>
         <thead>
             <tr>
                 <th></th>
