--- a/monitoreo/templates/simas/arboles.html
+++ b/monitoreo/templates/simas/arboles.html
@@ -60,18 +60,29 @@
 {% block contenido %}
 
  <div id="contenedor_igual">
-                            <a href="/fincas" class="educacion">Uso de tierra</a>
-                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
-                           
-                            <a href="/arboles" class="educacion">Existencia de árboles y Reforestación</a>
-                             <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
-                        </div>
-                        <div class="separador"></div>
+  <a href="/fincas" class="educacion">Uso de tierra</a>
+  <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
+                     
+  <a href="/arboles" class="educacion">Existencia de árboles y Reforestación</a>
+  <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
+  </div>
+<div class="separador"></div>
 
+<div id="sidebar">
+    <div class="graficos_widget">
+        <h1>Gráficos tipos de arboles</h1>
+        <a id="grafico1" href="#" onCLick="click_callback('maderable')">Árbol Maderable</a>
+        <a id="grafico2" href="#" onCLick="click_callback('forrajero')">Árbol Forrajero</a>
+        <a id="grafico3" href="#" onCLick="click_callback('energetico')">Árbol Energetico</a>
+        <a id="grafico4" href="#" onCLick="click_callback('frutal')">Árbol Frutal</a>
+    </div>
+    <div id="separador"></div>
+</div>
+<div id="grafo"></div>
 
 <div class="contenido">
     <div id="grafo"></div>
-    <table id="table_example" class="tablesorter" style="font-size:90%">
+    <table>
         <caption>Tabla Existencia de Arboles</caption>
         <thead>
             <tr>
@@ -109,7 +120,7 @@
         </tbody>
     </table>
     <br>
-    <table id="table_example" class="tablesorter" style="font-size:90%">
+    <table>
         <caption>Reforestación en ultimo año</caption>
         <thead>
             <tr>
@@ -133,15 +144,5 @@
         <tbody>
     </table>
 </div>
-<script>
-    // Hacemos que nos aplique cebra a las filas de la tabla y permita ordenarla
-    // ademas que ordene por defecto las filas 0,0 y 2,1
-    $(document).ready(function()
-    {
-        //$("#table_example").tablesorter();
-        //$("#table_example").tablesorter({sortList:[[0,0],[2,1]], widgets: ['zebra']});
-        $("#table_example").tablesorter({sortList:[[1,0],[1,1]], widgets: ['zebra']});
-    }
-); 
-</script>
+
 {% endblock %}
