--- a/monitoreo/templates/simas/equipos.html
+++ b/monitoreo/templates/simas/equipos.html
@@ -73,16 +73,17 @@
 {% endblock %}
 {% block contenido %}
 <div class="contenido">
-    <!--    <div class="graficos_widget">-->
-    <!--        <h1>Graficos de bienes</h1>-->
-    <!--        <a id="grafico1" href="#" onCLick="click_callback('tipocasa')">Tipo Casa</a></a>-->
-    <!--        <a id="grafico2" href="#" onCLick="click_callback('tipopiso')">Tipo Piso</a>-->
-    <!--        <a id="grafico3" href="#" onCLick="click_callback('tipotecho')">Tipo Techo</a>-->
-    <!--        <a id="grafico4" href="#" onCLick="click_callback('ambiente')">Ambientes</a>-->
-    <!--        <a id="grafico5" href="#" onCLick="click_callback('letrina')">Letrina</a>-->
-    <!--        <a id="grafico6" href="#" onCLick="click_callback('lavadero')">Lavadero</a>-->
-    <!--    </div>-->
+        <div class="graficos_widget">
+            <h1>Graficos de bienes</h1>
+            <a id="grafico1" href="#" onCLick="click_callback('tipocasa')">Tipo Casa</a></a>
+            <a id="grafico2" href="#" onCLick="click_callback('tipopiso')">Tipo Piso</a>
+            <a id="grafico3" href="#" onCLick="click_callback('tipotecho')">Tipo Techo</a>
+            <a id="grafico4" href="#" onCLick="click_callback('ambiente')">Ambientes</a>
+            <a id="grafico5" href="#" onCLick="click_callback('letrina')">Letrina</a>
+            <a id="grafico6" href="#" onCLick="click_callback('lavadero')">Lavadero</a>
+        </div>
     <div id="grafo"></div>
+    
     <table id="table_example" class="tablesorter" style="font-size:90%">
         <caption>Los Equipos</caption>
         <thead>
