--- a/monitoreo/templates/simas/ingreso.html
+++ b/monitoreo/templates/simas/ingreso.html
@@ -40,20 +40,20 @@
 {% endblock %}
 {%block contenido%}
 <div class="contenido">
-    <!--<div id="sidebar">-->
-    <!--    <div class="graficos_widget">-->
-    <!--        <h1>Gráficos ingresos</h1>-->
-    <!--        <a href="#" id="grafico1" onCLick="click_callback('vendio')">A quién venden?</a>-->
-    <!--        <a href="#" id="grafico2" onCLick="click_callback('maneja')">Quién maneja el negocio?</a>-->
-    <!--        <a href="#" id="grafico3" onCLick="click_callback('ingreso')">Quién tiene los ingresos?</a>-->
-    <!--        <h1>Gráficos Otros ingresos</h1>-->
-    <!--         <a href="#" id="grafico4" onCLick="click_callback('salario')">Tipos de Salarios</a>-->
-    <!--        <a href="#" id="grafico5" onCLick="click_callback('negocio')">Tipos de Negocio</a>-->
-    <!--        <a href="#" id="grafico6" onCLick="click_callback('remesa')">Tipos Remesas</a>-->
-    <!--        <a href="#" id="grafico7" onCLick="click_callback('alquiler')">Tipo alquiler</a>-->
-    <!--        <a href="#" id="grafico8" onCLick="click_callback('aportar')">Persona aportar en la finca</a>-->
-    <!--    </div>-->
-    <!--</div>-->
+    <div id="sidebar">
+        <div class="graficos_widget">
+            <h1>Gráficos ingresos</h1>
+            <a href="#" id="grafico1" onCLick="click_callback('vendio')">A quién venden?</a>
+            <a href="#" id="grafico2" onCLick="click_callback('maneja')">Quién maneja el negocio?</a>
+            <a href="#" id="grafico3" onCLick="click_callback('ingreso')">Quién tiene los ingresos?</a>
+            <h1>Gráficos Otros ingresos</h1>
+             <a href="#" id="grafico4" onCLick="click_callback('salario')">Tipos de Salarios</a>
+            <a href="#" id="grafico5" onCLick="click_callback('negocio')">Tipos de Negocio</a>
+            <a href="#" id="grafico6" onCLick="click_callback('remesa')">Tipos Remesas</a>
+            <a href="#" id="grafico7" onCLick="click_callback('alquiler')">Tipo alquiler</a>
+            <a href="#" id="grafico8" onCLick="click_callback('aportar')">Persona aportar en la finca</a>
+        </div>
+    </div>
     <div id="grafo"></div>
     <table id="table_example" class="tablesorter" style="font-size:90%">
         <caption>Los Ingresos familiares</caption>
