--- a/monitoreo/templates/simas/arboles.html
+++ b/monitoreo/templates/simas/arboles.html
@@ -3,6 +3,16 @@
 {%block titulo%}Existencia de árboles y Reforestación{%endblock%}
 {% block extra_header %}
 <script type="text/javascript">
+
+$(document).ready(function(){
+
+    $('#mas').click(function(){
+    $('#mostrar').slideDown();
+
+    })
+});
+
+
     var activo = 0;
     function click_callback(id){
         $.getJSON('/grafo/arboles/' + id, function(data) {
@@ -66,6 +76,12 @@
   <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
   </div>
 <div class="separador"></div>
+
+<div id="mostrar">
+     {% include "simas/menu.html" %}
+</div>
+
+<img id="mas" src="/archivos/imagen/more.png" alt="Indicadores">
 
 <div id="sidebar">
     <div class="graficos_widget">
