--- a/monitoreo/templates/simas/equipos.html
+++ b/monitoreo/templates/simas/equipos.html
@@ -3,6 +3,15 @@
 {%block titulo%}Subindicador Bienes{%endblock%}
 {% block extra_header %}
 <script type="text/javascript">
+
+$(document).ready(function(){
+
+    $('#mas').click(function(){
+    $('#mostrar').slideDown();
+
+    })
+});
+
     var activo = 0;
     function click_callback(id){
         $.getJSON('/grafo/bienes/' + id, function(data) {
@@ -72,6 +81,14 @@
 </script>
 {% endblock %}
 {% block contenido %}
+
+
+<div id="mostrar">
+     {% include "simas/menu.html" %}
+</div>
+
+<img id="mas" src="/archivos/imagen/more.png" alt="Indicadores">
+
 <div class="contenido">
         <div class="graficos_widget">
             <h1>Graficos de bienes</h1>
