--- a/monitoreo/templates/simas/cultivos.html
+++ b/monitoreo/templates/simas/cultivos.html
@@ -1,7 +1,25 @@
 {% extends "base.html"%}
 {%load unslugify %}
 {% block titulo %}Subindicador los Cultivos y la producción{% endblock %}
+{%block extra_header%}
+<script type="text/javascript">
+$(document).ready(function(){
+
+    $('#mas').click(function(){
+    $('#mostrar').slideDown();
+
+    })
+});
+
+</script>
+{%endblock%}
 {%block contenido%}
+<div id="mostrar">
+     {% include "simas/menu.html" %}
+</div>
+
+<img id="mas" src="/archivos/imagen/more.png" alt="Indicadores">
+
 <div class="contenido">
     <table id="table_example" class="tablesorter" style="font-size:90%">
         <caption>Los cultivos y la producción</caption>
