--- a/monitoreo/templates/simas/ingreso.html
+++ b/monitoreo/templates/simas/ingreso.html
@@ -5,6 +5,15 @@
 
 {% block extra_header %}
 <script type="text/javascript">
+
+$(document).ready(function(){
+
+    $('#mas').click(function(){
+    $('#mostrar').slideDown();
+
+    })
+});
+
     var activo = 0;
     function click_callback(id){
         $.getJSON('/grafo/ingreso/' + id, function(data) {
@@ -39,6 +48,13 @@
 </script>
 {% endblock %}
 {%block contenido%}
+
+<div id="mostrar">
+     {% include "simas/menu.html" %}
+</div>
+
+<img id="mas" src="/archivos/imagen/more.png" alt="Indicadores">
+
 <div class="contenido">
     <div id="sidebar">
         <div class="graficos_widget">
