--- a/monitoreo/templates/simas/manejo_agro.html
+++ b/monitoreo/templates/simas/manejo_agro.html
@@ -1,7 +1,26 @@
 {% extends "base.html"%}
 {%load unslugify %}
 {% block titulo %}Subindicador Opciones de Manejo Agroecológico{% endblock%}
+{%block extra_header%}
+<script type="text/javascript">
+$(document).ready(function(){
+
+    $('#mas').click(function(){
+    $('#mostrar').slideDown();
+
+    })
+});
+
+</script>
+{%endblock%}
 {% block contenido %}
+
+<div id="mostrar">
+     {% include "simas/menu.html" %}
+</div>
+
+<img id="mas" src="/archivos/imagen/more.png" alt="Indicadores">
+
 <div class="contenido">
     <table>
         <caption>Manejo Agroecológico</caption>
