--- a/monitoreo/templates/simas/mitigacion.html
+++ b/monitoreo/templates/simas/mitigacion.html
@@ -1,6 +1,18 @@
 {% extends "base.html"%}
 {%load unslugify %}
 {% block titulo %}Subindicador Mitigación de Riesgos{% endblock%}
+{%block extra_header%}
+<script type="text/javascript">
+$(document).ready(function(){
+
+    $('#mas').click(function(){
+    $('#mostrar').slideDown();
+
+    })
+});
+
+</script>
+{%endblock%}
 {% block contenido %}
 
 <div id="contenedor_igual">
@@ -10,6 +22,12 @@
   <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
 </div>
 <div class="separador"></div>
+ 
+<div id="mostrar">
+     {% include "simas/menu.html" %}
+</div>
+
+<img id="mas" src="/archivos/imagen/more.png" alt="Indicadores"> 
                         
 <div class="contenido">
     <table>
