--- a/monitoreo/templates/simas/semilla.html
+++ b/monitoreo/templates/simas/semilla.html
@@ -1,7 +1,25 @@
 {% extends "base.html"%}
 {%load unslugify %}
 {% block titulo %}Subindicador Uso de Semilla{% endblock%}
+{%block extra_header%}
+<script type="text/javascript">
+$(document).ready(function(){
+
+    $('#mas').click(function(){
+    $('#mostrar').slideDown();
+
+    })
+});
+
+</script>
+{%endblock%}
 {% block contenido %}
+<div id="mostrar">
+     {% include "simas/menu.html" %}
+</div>
+
+<img id="mas" src="/archivos/imagen/more.png" alt="Indicadores">
+
 <div class="contenido">
     <table>
         <caption>Uso de semilla</caption>
