agregando los cluster del mapa

--- a/monitoreo/templates/index.html
+++ b/monitoreo/templates/index.html
@@ -2,23 +2,47 @@
 
 {% block extra_header %}
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript" src="{{MEDIA_URL}}js/markerclusterer.js"></script>
+<script type="text/javascript" src="{{MEDIA_URL}}js/infobox.js"></script>
 <script type="text/javascript">
-    // Aplicar QuickSearch a la tabla y la lista
-    $(document).ready(function () {        
-        var map;
+    var map;
+    var markers = [];
+    $(document).ready(function () {     
+        var infowindow = new google.maps.InfoWindow();
         var myLatlng = new google.maps.LatLng(13,-85);
         var myOptions = {
             zoom: 7,
-            mapTypeControl: false,
+            mapTypeControl: true,
             center: myLatlng,
             mapTypeId: google.maps.MapTypeId.ROADMAP
         }
         map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
+        var image = new google.maps.MarkerImage('/files/images/custom_marker.png',
+        new google.maps.Size(15, 32),
+        new google.maps.Point(0,0),
+        new google.maps.Point(0, 32));
+            $.getJSON('/mapa/', function(data){
+                $.each(data, function(i, elemento){
+                    var latlng = new google.maps.LatLng(elemento.lat, elemento.lon);
+                    var marker = new google.maps.Marker({
+                        position: latlng,
+                        map: map,
+                        title: elemento.nombre,
+                        icon: image,                        
+                        item: item,
+                        id: elemento.id                        
+                    });                    
+                    markers.push(marker);                    
+                });
+                var markerCluster = new MarkerClusterer(map, markers);
+            });
+                
     });
+
 </script>
 {% endblock %}
 
-{% block filtros%} {% endblock %}
+{% block filtros %} {% endblock %}
 
 {% block index %}
 <div class="actualmente">
