fix del cluster

--- a/monitoreo/templates/index.html
+++ b/monitoreo/templates/index.html
@@ -29,7 +29,7 @@
                         map: map,
                         title: elemento.nombre,
                         icon: image,                        
-                        item: item,
+                        item: '',
                         id: elemento.id                        
                     });                    
                     markers.push(marker);                    
