cambiando tipo de mapa

--- a/monitoreo/templates/index.html
+++ b/monitoreo/templates/index.html
@@ -14,7 +14,7 @@
             zoom: 7,
             mapTypeControl: true,
             center: myLatlng,
-            mapTypeId: google.maps.MapTypeId.ROADMAP
+            mapTypeId: google.maps.MapTypeId.TERRAIN
         }
         map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
         var image = new google.maps.MarkerImage('/files/images/custom_marker.png',
