--- a/monitoreo/media/css/style.css
+++ b/monitoreo/media/css/style.css
@@ -502,6 +502,7 @@ form.quicksearch img { vertical-align: middle; margin-left: 5px; }
     margin-bottom:8px;
     font-size:12px;
     color:#838377;
+    display: inline-block;
 }
 
 /* FIN EL CSS FILTROS DE FORMULARIO */
@@ -514,6 +515,10 @@ form.quicksearch img { vertical-align: middle; margin-left: 5px; }
     padding: 10px 11px 12px 13px;
     margin: 10px 11px 12px 13px;
 
+}
+
+.titulo_indicadores h2 {
+    background-color: #000;
 }
 
 #indicadores img {
@@ -552,14 +557,10 @@ form.quicksearch img { vertical-align: middle; margin-left: 5px; }
 /* CONTENEDOR DE LOS FILTROS COMO DEL MENU PRINCIPAL DE LOS INDICADORES */
 
 #contenedor_indicadores {
-    width: 930px;
+    width: 862px;
     margin: 0 auto;
     background: #fff;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 10px;
-    padding-bottom: 20px;
-
+    padding: 11px 12px 0px;
 
 }
 
@@ -567,6 +568,11 @@ form.quicksearch img { vertical-align: middle; margin-left: 5px; }
     align: center;
     margin-bottom: 14px;
     margin-right: 2px;
+    
+}
+
+#contenedor_indicadores a:hover {
+    text-decoration: underline;
 }
 #titulo{
     background-color: rgba(238, 232, 170, 0.7);
@@ -616,7 +622,7 @@ form.quicksearch img { vertical-align: middle; margin-left: 5px; }
 
 #contenedor_igual a:hover {
     text-decoration: none;
-    font-size:22px;
+    font-size:16px;
     font-weight:bold;
     color:#fff;
     text-shadow: 0px -1px 1px #000;
@@ -682,13 +688,18 @@ form.quicksearch img { vertical-align: middle; margin-left: 5px; }
 
 .variables{
     float:left;
-    background:#fce795;
-    width:85px;
-    font-weight:bold;
-    height:26px;
+    width:108px;
+    height:31px;
     padding-top:10px;
     padding-left:15px;
     margin-right:15px;
+}
+
+.variables img {
+    margin-top: -6px;
+    margin-left: -6px;
+    margin-right: -6px;
+    
 }
 
 .variables_filtro{
