--- a/monitoreo/templates/base.html
+++ b/monitoreo/templates/base.html
@@ -7,6 +7,18 @@
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
         <script src="{{MEDIA_URL}}js/jquery.quicksearch.js" type="text/javascript"></script>
         <script src="{{MEDIA_URL}}js/jquery.tablesorter.min.js" type="text/javascript" ></script>
+    <script type="text/javascript">
+    // <![CDATA[
+    $(document).ready(function(){
+
+    $('#mas').click(function(){
+    $('#mostrar').slideDown();
+
+    })
+  });   
+    // ]]>
+    </script>    
+    
 	{%block extra_header%}{%endblock%}
     </head>
     <body>
@@ -39,8 +51,8 @@
             <div class="wrapper">
                 {% block filtros %}
                 <div id="filtros">
-                                <span class="variables">Variables</span>
-                                
+                                <span class="variables"><img id="mas" src="/archivos/imagen/cambiar.png" alt=""></span>
+                                <span class="variables_filtro"><b>Filtros <br>Seleccionados</b></span>
                                 {%if num_familias%}<span class="variables_filtro"><b>Familias</b><br>{{num_familias}}</span>{%endif%}
                                 {%if request.session.fecha%}<span class="variables_filtro"><b>Año</b><br>{{request.session.fecha}}</span>{%endif%}
                                 {%if request.session.departamento%}<span class="variables_filtro"><b>Departamento</b><br>{{request.session.departamento}}</span>{%endif%}
