--- a/monitoreo/templates/simas/animales.html
+++ b/monitoreo/templates/simas/animales.html
@@ -21,13 +21,13 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>TOTAL</td>
-                <td>{{totales.numero}}</td>
-                <td>{{totales.porcentaje_num}}</td>
-                <td>{{totales.animales}}</td>
-                <td>{{totales.porcentaje_animal}}</td>
-            </tr>
+<!--            <tr>-->
+<!--                <td>TOTAL</td>-->
+<!--                <td>{{totales.numero}}</td>-->
+<!--                <td>{{totales.porcentaje_num}}</td>-->
+<!--                <td>{{totales.animales}}</td>-->
+<!--                <td>{{totales.porcentaje_animal}}</td>-->
+<!--            </tr>-->
             {%for fila in tabla%}
             <tr>
                 {%for celda in fila%}
